--- a/config/postgres-deployment.yaml
+++ b/config/postgres-deployment.yaml
@@ -16,11 +16,22 @@ spec:
         image: postgres:17
         env:
         - name: POSTGRES_USER
-          value: "admin"
+          valueFrom:
+            secretKeyRef:
+              name: db-credentials
+              key: DB_USER
+
         - name: POSTGRES_PASSWORD
-          value: "Sumedha1234"
+          valueFrom:
+            secretKeyRef:
+              name: db-credentials
+              key: DB_PASSWORD
+
         - name: POSTGRES_DB
-          value: "mydb"
+          valueFrom:
+            configMapKeyRef:
+              name: db-config
+              key: POSTGRES_DB
         resources:
           limits:
             memory: "128Mi"
